# fiis_web

./: .gitignore  README.md  app.py  config.py  pyproject.toml  requirements.txt
.streamlit/: config.toml
core/: data_loader.py  preprocessing.py  scoring.py  similarity.py  utils.py  validators.py
tests/: test_preprocessing.py
ui/: components.py  filters.py
