[project]
name = "fiis-web"
version = "0.1.0"
description = "Aplicação Streamlit para análise de Fundos Imobiliários (FIIs) usando dados do Fundamentus, com filtros inteligentes e busca de fundos semelhantes."
authors = [
    { name = "Edson Deveza", email = "edsondeveza@hotmail.com" }
]
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
    "streamlit >=1.51.0,<2.0.0",
    "pandas >=2.3.3,<3.0.0",
    "openpyxl >=3.1.5,<4.0.0",
    "matplotlib >=3.10.7,<4.0.0",
    "requests >=2.32.5,<3.0.0",
    "lxml >=6.0.2,<7.0.0",
    "plotly (>=6.4.0,<7.0.0)"
    

]

[build-system]
requires = ["poetry-core>=1.9.0,<2.0.0"]
build-backend = "poetry.core.masonry.api"

# 🔧 Diz pro Poetry: "não tente instalar esse projeto como pacote"
[tool.poetry]
package-mode = false

# Grupo de dependências de desenvolvimento (funciona com --with dev)
[tool.poetry.group.dev.dependencies]
black = "^24.0.0"
isort = "^5.13.0"
